[package]
name = "patchy_video_autocomplete_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.51"
axum = "0.4.2"
log = "0.4.14"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tracing-appender = "0.2.0"
toml = "0.5.8"
tower-http = { version = "0.2.0", features = ["trace"] }
strum = "0.23.0"
strum_macros = "0.23.1"
lazy_static = "1.4.0"
cedarwood = "0.4.5"
mongodb = "2.1.0"
futures = "0.3.19"
num_enum = "0.5.5"
unicode-segmentation = "1.8.0"
tap = "1.0.1"
itertools = "0.10.3"
patchy_video_autocomplete_macros = { path = "./packages/patchy_video_autocomplete_macros" }
parking_lot = "0.11.2"
maplit = "1.0.2"
hyper = { version = "0.14", features = ["full"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
pathetic = "0.3.0"
